# quadrotor

./: simple_tree.bt
devel/: .rosinstall  setup.sh
devel/include/hector_mapping/: HectorDebugInfo.h  HectorIterData.h
devel/include/hector_uav_msgs/: Compass.h  EnableMotorsRequest.h  EnableMotorsResponse.h  HeadingCommand.h  HeightCommand.h  LandingActionFeedback.h  LandingFeedback.h  LandingGoal.h  LandingResult.h  MotorCommand.h  MotorPWM.h  PoseAction.h  PoseActionGoal.h  PoseGoal.h  PoseResult.h  PositionXYCommand.h  RawRC.h  ServoCommand.h  Supply.h  TakeoffActionFeedback.h  TakeoffActionResult.h  ThrustCommand.h  VelocityZCommand.h
devel/include/moveit_msgs/: AllowedCollisionEntry.h  AllowedCollisionMatrix.h  ApplyPlanningSceneRequest.h  ApplyPlanningSceneResponse.h  AttachedCollisionObject.h  BoundingVolume.h  CheckIfRobotStateExistsInWarehouseRequest.h  CheckIfRobotStateExistsInWarehouseResponse.h  CollisionObject.h  ConstraintEvalResult.h  Constraints.h  ContactInformation.h  CostSource.h  DeleteRobotStateFromWarehouseRequest.h  DeleteRobotStateFromWarehouseResponse.h  DisplayRobotState.h  DisplayTrajectory.h  ExecuteKnownTrajectoryRequest.h  ExecuteKnownTrajectoryResponse.h  ExecuteTrajectoryAction.h  ExecuteTrajectoryActionFeedback.h  ExecuteTrajectoryActionGoal.h  ExecuteTrajectoryActionResult.h  ExecuteTrajectoryFeedback.h  ExecuteTrajectoryGoal.h  ExecuteTrajectoryResult.h  GetCartesianPathRequest.h  GetCartesianPathResponse.h  GetConstraintAwarePositionIKRequest.h  GetConstraintAwarePositionIKResponse.h  GetKinematicSolverInfoRequest.h  GetKinematicSolverInfoResponse.h  GetMotionPlanRequest.h  GetMotionPlanResponse.h  GetPlannerParamsRequest.h  GetPlannerParamsResponse.h  GetPlanningSceneRequest.h  GetPlanningSceneResponse.h  GetPositionFKRequest.h  GetPositionFKResponse.h  (+71 more)
devel/include/moveit_resources/: .config_install.h  config.h
devel/lib/: libchomp_planner_plugin.so.0.9.11  libcollision_detector_hybrid_plugin.so.0.9.11  libmoveit_background_processing.so.0.9.11  libmoveit_cached_ik_kinematics_base.so.0.9.11  libmoveit_cached_ik_kinematics_plugin.so.0.9.11  libmoveit_collision_detection.so.0.9.11  libmoveit_collision_detection_fcl.so.0.9.11  libmoveit_collision_distance_field.so.0.9.11  libmoveit_collision_plugin_loader.so.0.9.11  libmoveit_common_planning_interface_objects.so.0.9.11  libmoveit_constraint_sampler_manager_loader.so.0.9.11  libmoveit_constraint_samplers.so.0.9.11  libmoveit_controller_manager_example.so.0.9.11  libmoveit_default_planning_request_adapter_plugins.so.0.9.11  libmoveit_distance_field.so.0.9.11  libmoveit_dynamics_solver.so.0.9.11  libmoveit_exceptions.so.0.9.11  libmoveit_fake_controller_manager.so.0.9.11  libmoveit_kdl_kinematics_plugin.so.0.9.11  libmoveit_kinematic_constraints.so.0.9.11  libmoveit_kinematics_base.so.0.9.11  libmoveit_kinematics_metrics.so.0.9.11  libmoveit_kinematics_plugin_loader.so.0.9.11  libmoveit_lazy_free_space_updater.so.0.9.11  libmoveit_lma_kinematics_plugin.so.0.9.11  libmoveit_motion_planning_rviz_plugin.so.0.9.11  libmoveit_motion_planning_rviz_plugin_core.so.0.9.11  libmoveit_move_group_capabilities_base.so.0.9.11  libmoveit_move_group_default_capabilities.so.0.9.11  libmoveit_move_group_interface.so.0.9.11  libmoveit_move_group_pick_place_capability.so.0.9.11  libmoveit_occupancy_map_monitor.so.0.9.11  libmoveit_ompl_interface.so.0.9.11  libmoveit_ompl_planner_plugin.so.0.9.11  libmoveit_pick_place_planner.so.0.9.11  libmoveit_plan_execution.so.0.9.11  libmoveit_planners_chomp.so.0.9.11  libmoveit_planning_interface.so.0.9.11  libmoveit_planning_pipeline.so.0.9.11  libmoveit_planning_request_adapter.so.0.9.11  (+33 more)
devel/lib/geometric_shapes/: test_bounding_sphere
devel/lib/hector_compressed_map_transport/: map_to_image_node
devel/lib/hector_geotiff/: geotiff_node  geotiff_saver
devel/lib/hector_imu_attitude_to_tf/: imu_attitude_to_tf_node
devel/lib/hector_imu_tools/: pose_and_orientation_to_imu_node
devel/lib/hector_map_server/: hector_map_server
devel/lib/my_plagin/: oct  (+8 more)
install/: .rosinstall  setup.sh
src/: .rosinstall  .rosinstall.bak  setup.sh
src/my_plagin/: CMakeLists.txt  package.xml
src/my_plagin/include/my_plagin/: my_library.h
src/my_plagin/launch/: octomap.launch  spawn_quadrotor.launch
src/my_plagin/rviz_cfg/: marker_config.rviz
src/my_plagin/scripts/: getoff.py  oct.cpp  talker.py
src/my_plagin/src/: compiling_error.txt  drawTrajectory.cpp  genDestinyPoint.cpp  genDestinyPointRRT.cpp  genOctTree.cpp  genPointCloud.cpp  makeGraphicInRviz.cpp  makeRRTmodif.cpp  moveToDestiny.cpp  oct.cpp
src/my_plagin/worlds/: temple1.world  temple2.world
(+245 files in other folders)
